<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.miami.c11926684.bigapp1.BigApp1_MainActivity_AfterStart">

    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/item3"
        app:showAsAction="never" />
    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/item4"
        app:showAsAction="never" />
    <item
        android:id="@+id/item5"
        android:orderInCategory="100"
        android:title="@string/item5"
        app:showAsAction="never" />
</menu>
